--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<dependency>
             		<groupId>org.seleniumhq.selenium</groupId>
             		<artifactId>selenium-java</artifactId>
+					<version>${selenium.version}</version>
         	</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
